# Devops-pipeline

./: .Dockerignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: CI_CD.yml  HL2.yml  HL3.yml  ci-cd-pipeline.yml  devops-pipeline.yml  devops-pipeline_project_Masoud.yml  manual-trigger.yml  pytest.yml  test.yml  workflow.yml
src/tests/: test_crypto_api.py
src/webapp/: __init__.py  app.py  constants.py  crypto_api.py  utils.py
terraform/01-infrastructure/: main.tf  outputs.tf  providers.tf  variables.tf
